Missed plugin management