@@ -16,91 +16,174 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.stratio.morphlines-ng</groupId>
-	<artifactId>stratio-morphlines-ng</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
-	<name>Stratio Morphlines NG</name>
-	<packaging>pom</packaging>
+    <groupId>com.stratio.morphlines-ng</groupId>
+    <artifactId>stratio-morphlines-ng</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
+    <name>Stratio Morphlines NG</name>
+    <packaging>pom</packaging>
 
-	<properties>
-		<flume.version>1.6.0</flume.version>
-		<kite.version>0.17.0</kite.version>
-		<junit.version>4.11</junit.version>
-		<commons.io.version>2.1</commons.io.version>
-		<maxmind.version>0.3.3</maxmind.version>
-		<typesafe.config.version>1.2.1</typesafe.config.version>
-		<mockito.version>1.10.8</mockito.version>
-		<datastax.version>2.1.2</datastax.version>
-		<jackson.databind.version>2.4.4</jackson.databind.version>
-		<tika.version>1.5</tika.version>
+    <properties>
+        <flume.version>1.6.0</flume.version>
+        <kite.version>0.17.0</kite.version>
+        <junit.version>4.11</junit.version>
+        <commons.io.version>2.1</commons.io.version>
+        <maxmind.version>0.3.3</maxmind.version>
+        <typesafe.config.version>1.2.1</typesafe.config.version>
+        <mockito.version>1.10.8</mockito.version>
+        <datastax.version>2.1.2</datastax.version>
+        <jackson.databind.version>2.4.4</jackson.databind.version>
+        <tika.version>1.5</tika.version>
 
-		<mongodb.version>2.12.4</mongodb.version>
+        <mongodb.version>2.12.4</mongodb.version>
 
-	</properties>
+    </properties>
 
-	<modules>
-		<module>stratio-geoip-morphline</module>
-		<module>stratio-nlp-morphline</module>
-		<module>stratio-wikipediacleaner-morphline</module>
+    <modules>
+        <module>stratio-geoip-morphline</module>
+        <module>stratio-nlp-morphline</module>
+        <module>stratio-wikipediacleaner-morphline</module>
         <module>stratio-commons-morphline</module>
-		<module>stratio-checkpointfilter-morphline</module>
-		<module>stratio-geolocateairports-morphline</module>
-		<module>doc</module>
-	</modules>
+        <module>stratio-checkpointfilter-morphline</module>
+        <module>stratio-geolocateairports-morphline</module>
+        <module>doc</module>
+    </modules>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>${junit.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.mockito</groupId>
-				<artifactId>mockito-all</artifactId>
-				<scope>test</scope>
-				<version>${mockito.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.kitesdk</groupId>
-				<artifactId>kite-morphlines-core</artifactId>
-				<version>${kite.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.maxmind.db</groupId>
-				<artifactId>maxmind-db</artifactId>
-				<version>${maxmind.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-databind</artifactId>
-				<version>${jackson.databind.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>commons-io</groupId>
-				<artifactId>commons-io</artifactId>
-				<version>${commons.io.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.typesafe</groupId>
-				<artifactId>config</artifactId>
-				<version>${typesafe.config.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.easytesting</groupId>
-				<artifactId>fest-assert</artifactId>
-				<version>1.4</version>
-			</dependency>
-			<dependency>
-				<groupId>org.mongodb</groupId>
-				<artifactId>mongo-java-driver</artifactId>
-				<version>${mongodb.version}</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <scope>test</scope>
+                <version>${mockito.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.kitesdk</groupId>
+                <artifactId>kite-morphlines-core</artifactId>
+                <version>${kite.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.maxmind.db</groupId>
+                <artifactId>maxmind-db</artifactId>
+                <version>${maxmind.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.databind.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons.io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.typesafe</groupId>
+                <artifactId>config</artifactId>
+                <version>${typesafe.config.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.easytesting</groupId>
+                <artifactId>fest-assert</artifactId>
+                <version>1.4</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongo-java-driver</artifactId>
+                <version>${mongodb.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>findbugs-maven-plugin</artifactId>
+                    <version>2.5.4</version>
+                    <configuration>
+                        <effort>Max</effort>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.4</version>
+                    <configuration>
+                        <skip>true</skip>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <argLine>${jacocoUT} -XX:MaxPermSize=512m</argLine>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                    <excludes>
+                        <exclude>**/*IT.java</exclude>
+                    </excludes>
+                    <skipTests>${skipUTs}</skipTests>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <argLine>${jacocoIT}</argLine>
+                    <includes>
+                        <include>**/*IT.java</include>
+                    </includes>
+                    <excludes>
+                        <exclude>**/*Test.java</exclude>
+                    </excludes>
+                    <skipTests>${skipITs}</skipTests>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.1.201405082137</version>
+                <executions>
+                    <execution>
+                        <id>pre-unittest</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <destFile>${project.build.directory}/jacocoUT.exec</destFile>
+                            <propertyName>jacocoUT</propertyName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>pre-integrationtest</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <destFile>${project.build.directory}/jacocoIT.exec</destFile>
+                            <propertyName>jacocoIT</propertyName>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
